Render Popper in a Portal by Id to avoid overflow of parent
Using createPortal from ReactDOM the popper is added in a portal and displayed outside of Root Element in order to avoid overflow

Docs added

Unit tests are not added because when unit testing the portal is rendered inside by default

--- a/docs-site/src/components/Examples/examples.scss
+++ b/docs-site/src/components/Examples/examples.scss
@@ -105,6 +105,10 @@
       padding-left: 0;
     }
   }
+  &#example-portal-by-id {
+    position: relative;
+    overflow: hidden;
+  }
 }
 
 .red-border {
